# kit-android

./: .gitignore  BUNDLE_PACKAGING.md  INTEGRATION.md  JS_FILES_ANALYSIS.md  LICENSE  LICENSE_HEADER  Makefile  README.md  build.gradle.kts  index.html  package.json  settings.gradle.kts  tsconfig.json  vite.config.quickjs.ts  vite.config.ts
.github/workflows/: android-ci.yml  android-e2e.yml  publish-maven.yml
AndroidDemo/: .gitignore  README.md  README_NATIVE.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle  settings.gradle.kts
AndroidDemo/app/: build.gradle.kts  debug.keystore  proguard-rules.pro
AndroidDemo/app/src/main/: AndroidManifest.xml
AndroidDemo/bridge/: README.md  README_STORAGE.md  build.gradle.kts
AndroidDemo/bridge/libs/: quickjs-android-0.9.2-aligned.aar
AndroidDemo/bridge/src/main/cpp/: CMakeLists.txt  DEPRECATED.md  README.md
AndroidDemo/designsystem/: build.gradle.kts
AndroidDemo/gradle/: libs.versions.toml
AndroidDemo/storage/: README_SECURITY.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
Scripts/: rebuild-sdk.sh  resolve-walletkit-path.sh
Scripts/generate-api/: generate-api-models-config.json  generate-api-models.sh  generate-test-models-config.json  generate-test-models.sh
Scripts/generate-api/templates/: data_class.mustache  licenseInfo.mustache  modelChildClass.mustache  modelDiscriminatedUnion.mustache  modelGeneric.mustache
TONWalletKit-Android/: .gitignore  README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
TONWalletKit-Android/api/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
TONWalletKit-Android/bridge/: build.gradle.kts  proguard-rules.pro
TONWalletKit-Android/gradle/: libs.versions.toml
TONWalletKit-Android/impl/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
TONWalletKit-Android/impl/src/main/cpp/: CMakeLists.txt
gradle/: libs.versions.toml
js/: BRIDGE_ARCHITECTURE.md  Makefile  README.md  build.cjs
js/src/: AndroidStorageAdapter.ts  bridge.ts  globals.d.ts  index.ts  inject.ts  setupPolyfills.ts  textEncoder.ts  types.ts
js/src/api/: browser.ts  cryptography.ts  eventListeners.ts  index.ts  initialization.ts  jettons.ts  nft.ts  requests.ts  tonconnect.ts  transactions.ts  wallets.ts
js/src/bridge/: index.ts
js/src/bridge/api/: connectionOperations.ts  jettonOperations.ts  sessionOperations.ts  transactionOperations.ts  walletOperations.ts
js/src/bridge/core/: eventForwarding.ts  initialization.ts
js/src/bridge/rpc/: handler.ts  types.ts
js/src/core/: index.ts  initialization.ts  moduleLoader.ts  state.ts
js/src/polyfills/: setupPolyfills.ts
js/src/transport/: diagnostics.ts  index.ts  messaging.ts  nativeBridge.ts
js/src/types/: api.ts  bridge.ts  events.ts  index.ts  walletkit.ts
js/src/utils/: address.ts  helpers.ts  index.ts  network.ts  parsing.ts  serialization.ts
src-js/: bridge.ts  globals.d.ts  index.ts  main.ts  setupPolyfills.ts  types.d.ts  types.ts
(+991 files in other folders)
